others/minnaker/manifests/patch-delete-grafana-deployment.yml
# See patch-delete-grafana-sa.yml for why.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
$patch: delete
