others/minnaker/manifests/patch-delete-grafana-service.yml
# See patch-delete-grafana-sa.yml for why.
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
$patch: delete
